feat(payroll): 重构薪酬合规与生产版本